# voxelization-pcd-rust

./: Cargo.toml  memo.md
src/: lib.rs  load_pcd.rs  main.rs  shader.wgsl
