[package]
name = "voxelization-myself"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
nohash-hasher = "0.2.0"
# For loading pcd files
pcd-rs = { version = "0.12.0", features = ["derive"] }
rayon = "1.10.0"
# For wgpu
wgpu = "25.0.0"
env_logger = "0.11"
pollster = "0.3.0"
bytemuck = "1.22.0"
